--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^5.0.0",
+    "@google/genai": "^1.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
